--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,6 @@ dependencyResolutionManagement {
 rootProject.name = "K230201AndroidLab"
 include ':app'
 include ':testsample'
+include ':test2'
+include ':test6'
+include ':test'
