--- a/test7/src/main/AndroidManifest.xml
+++ b/test7/src/main/AndroidManifest.xml
@@ -10,13 +10,9 @@
         android:theme="@style/Theme.K230201AndroidLab">
         <activity
             android:name=".MainActivity2"
-            android:exported="true">
-
-        </activity>
-
+            android:exported="false" />
 
         <activity
-
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
