--- a/ch7_layout/build.gradle
+++ b/ch7_layout/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.test7'
+    namespace 'com.example.ch7_layout'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.test7"
+        applicationId "com.example.ch7_layout"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -29,10 +29,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-
-    viewBinding{
-        enabled = true
     }
 }
 
