--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,6 @@ include ':test6'
 include ':ch6_view'
 include ':test7'
 include ':ch7_layout'
+include ':test8'
+include ':ch8_event'
+include ':test9'
