--- a/test10/src/main/AndroidManifest.xml
+++ b/test10/src/main/AndroidManifest.xml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    
-    <!--시스템 앱에 접근하기 위한 샘플, 네트워크 접근(노말), 위치 접근(dangerous)-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
-        
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
-
-        <!--퍼미션을 해당 엑티비티에 적용-->
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:permission="com.example.permission.Test_permission">
-
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
