--- a/test10/src/main/AndroidManifest.xml
+++ b/test10/src/main/AndroidManifest.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+<!-- 퍼미션을 설정-->
+<!--<permission android:name="com.example.permission.Test_permisiion"
+    android:label="test permisiion"
+    android:description="test description"
+    android:protectionLevel="dangerous"/>-->
+
+<!--시스템 앱에 접근하기 위한 샘플, 네트워크 접근(노말), 위치접근(dangerous)-->
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
