--- a/test11/src/main/AndroidManifest.xml
+++ b/test11/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
         <activity
+            android:name=".MainActivity2"
+            android:exported="true" />
+        <activity
             android:name=".ThreeActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".TwoActivity"
             android:exported="true"
