--- a/ch12_material/src/main/AndroidManifest.xml
+++ b/ch12_material/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
         <activity
+            android:name=".navigation_header"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
