--- a/ch12_material/src/main/AndroidManifest.xml
+++ b/ch12_material/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
         <activity
-            android:name=".navigation_header"
-            android:exported="false" />
+            android:name=".IntroActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
