--- a/ch13_activity/build.gradle
+++ b/ch13_activity/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.test13'
+    namespace 'com.example.ch13_activity'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.test13"
+        applicationId "com.example.ch13_activity"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -41,8 +41,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
