--- a/ch13_activity/src/main/AndroidManifest.xml
+++ b/ch13_activity/src/main/AndroidManifest.xml
@@ -9,25 +9,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
         <activity
-            android:name=".MainActivity443"
+            android:name=".AddActivity"
             android:exported="true" />
-        <activity
-            android:name=".KeyboardActivity"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".BundleActivity"
-            android:exported="true" />
-        <activity
-            android:name=".DetailMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="ACTION_EDIT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
