--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ include ':test12'
 include ':ch12_material'
 include ':test13'
 include ':ch13_activity'
+include ':test16'
+include ':ch16_provider'
