--- a/settings.gradle
+++ b/settings.gradle
@@ -32,5 +32,6 @@ include ':test13'
 include ':ch13_activity'
 include ':test16'
 include ':ch16_provider'
-include ':test17'
+include ':test16-2multiimg'
 include ':test17-2'
+include ':test17'
