--- a/test10/src/main/AndroidManifest.xml
+++ b/test10/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-<!-- 퍼미션을 설정-->
-<!--<permission android:name="com.example.permission.Test_permisiion"
+    <!-- 퍼미션을 설정 -->
+    <!--
+<permission android:name="com.example.permission.Test_permisiion"
     android:label="test permisiion"
     android:description="test description"
-    android:protectionLevel="dangerous"/>-->
+    android:protectionLevel="dangerous"/>
+    -->
+    <!-- 시스템 앱에 접근하기 위한 샘플, 네트워크 접근(노말), 위치접근(dangerous) -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-<!--시스템 앱에 접근하기 위한 샘플, 네트워크 접근(노말), 위치접근(dangerous)-->
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +21,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
+        <activity
+            android:name=".DetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
