--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,6 @@ include ':ch16_provider'
 include ':test16-2multiimg'
 include ':test17-2'
 include ':test17'
+include ':test17-crud'
+include ':test17-4'
+include ':ch17_test'
