--- a/test10/src/main/AndroidManifest.xml
+++ b/test10/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
     <!-- 퍼미션을 설정 -->
     <!--
 <permission android:name="com.example.permission.Test_permisiion"
@@ -11,7 +12,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -21,6 +21,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.K230201AndroidLab">
+        <receiver
+            android:name=".ReplyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+        <receiver
+            android:name=".OneReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name=".DetailActivity"
             android:exported="true" />
