--- a/settings.gradle
+++ b/settings.gradle
@@ -23,7 +23,6 @@ include ':test8'
 include ':ch8_event'
 include ':test9'
 include ':ch9_resource'
-include ':test10'
 include ':test11'
 include ':ch11_jetpack'
 include ':test12'
@@ -38,6 +37,8 @@ include ':test17'
 include ':test17-crud'
 include ':test17-4'
 include ':ch17_test'
-include ':test18'
 include ':test18-newsapi'
 include ':test18-pdtest'
+include ':ch18_net_test1'
+include ':test18'
+include ':test10'
