--- a/test18-newsapi/src/main/AndroidManifest.xml
+++ b/test18-newsapi/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.test18_newsapi">
+    package="com.example.test18_pdtest_pdtesti_newsapi">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
