--- a/test10/src/main/AndroidManifest.xml
+++ b/test10/src/main/AndroidManifest.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- 퍼미션을 설정 -->
-    <!--
-<permission android:name="com.example.permission.Test_permisiion"
-    android:label="test permisiion"
-    android:description="test description"
-    android:protectionLevel="dangerous"/>
-    -->
-    <!-- 시스템 앱에 접근하기 위한 샘플, 네트워크 접근(노말), 위치접근(dangerous) -->
+    <!-- 시스템 앱에 접근 하기 위한 샘플, 네트워크 접근(노말), 위치접근(dangerous) -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -20,11 +12,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.K230201AndroidLab">
+        android:theme="@style/Theme.K23021AndroidLab">
+        <activity
+            android:name=".MainActivity306"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity305"
+            android:exported="true" />
+
         <receiver
             android:name=".ReplyReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
         <receiver
             android:name=".OneReceiver"
             android:enabled="true"
@@ -34,7 +33,7 @@
             android:name=".DetailActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".NotiTestActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
