--- a/test18/src/main/AndroidManifest.xml
+++ b/test18/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.test18">
-    <!-- 외부 통신을 위해서 인터넷 사용 권한 요청 -->
+    <!-- 외부 통신을 위해서 인터넷 사용 권한 요청. -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.K230201AndroidLab">
+        android:theme="@style/Theme.K23021AndroidLab">
         <activity
             android:name=".MainActivity3"
             android:exported="true" />
